tileverse-parquet-datastore: replace proxy based datastore by ContentDataStore implementation